web/css/fc_styles.css
/* ... */
#worktasks tr {
    background-color:#ededed;
}

span.fa-user{
	margin-top:3px;
}

.reg-complete-summary-left-bar {
	margin-left: -15px;
	padding-right: 0px;
	margin-bottom: 10px;
}

.reg-complete-wrapper {
	padding:10px;
}

.reg-complete-text {
	/* float:left; */
}

.reg-complete-buttons {
	float:right;
}

.reg-complete-buttons p {
	font-weight: bold;
}

.reg-complete-buttons ul {
	list-style-type: none;
}

.reg-complete-buttons ul li {
	margin-left: -40px;
	margin-bottom: 5px;
}

.reg-complete-buttons ul li a {
	width:100%;
	text-align: center;
}

.document-upload.summary {
	margin-top: 20px;
	padding:5px;
}

.document-upload.summary .details-left{
	/*changing this may affect self -reg summary*/
	float: none; 
	margin-right: 2% !important;;
}

span.circleBg {
	background: #1baf37;
	-moz-border-radius :70px;
	-webkit-border-radius :70px;
	border-radius :70px;
	position:relative;
	left:8px;
}

span.rejectedBg {
	background: red;
	-moz-border-radius :70px;
	-webkit-border-radius :70px;
	border-radius :70px;
	position:relative;
	left:8px;
}


.taskListCounter {
	background: #c4070a;
	-moz-border-radius :70px;
	-webkit-border-radius :70px;
	border-radius :70px;
	position:absolute;
	left:24%;
	top:7px;
	font-size: 12px;
	color:#fff;
	width: 23px;
	height:23px;
	line-height: 23px;
	text-align: center;
}

span.circle-check {
	background: #d8d8d8;
	-moz-border-radius :70px;
	-webkit-border-radius :70px;
	border-radius :70px;
	position:relative;
	left:8px;
}

span.circle-check > i {
    color: #1baf37;
	margin-left:3px;
	margin-right:4px;
}

i.documents-incomplete, .documents-approved, i.tab-not-visited {
	display:none;
}

i.documents-complete, i.memdetails-visited, i.regdetails-visited, i.tab-ticked {
	color: #ffffff;
	margin-left:4px;
	margin-right:4px;
}

i.file-uploaded {
	color: #1baf37;
	margin-left:4px;
	margin-right:4px;
    font-size: 20px;
}

i.documents-rejected {
	color:#fff;
	margin-left:6px;
	margin-right:5px;
}

#flow-btn-back  {
    margin-right:30px;
}

#ffg_venue td {
	font-size: 12px;
}
#ffg_venue td input[type="text"] {
	width: 100%;
	padding: 5px 0px;
}
#ffg_venue td select {
	width: 100%;
	border: 1px solid #cccccc;
}

/*a class called upon a condition on the complete screen - 
this is to nudge the "back to" button into position*/
.nudge {
	margin-left:15px;
	margin-top: 10px;
}

.docViewerEntityInfo p {
	margin:15px 15px 10px 15px;
	padding-top:15px;
}

table.facility-field-summary tr td { 
	padding: 5px;
}

.facility-field-summary thead tr td, .facility-field-summary tr td {
	font-size: 13px;
}

.facility-field-summary tr td {
	border-right: 1px solid #ccc;
	border-left: 1px solid #ccc;
}
.row-padding {
	padding: 15px 15px 5px 15px;
}

.products-table {
	margin:0 auto;
}
form#flowFormID h3.panel-header {
	font-weight: bold;
}
.document-upload h3.panel-header {
	font-weight: bold;
}
form#flowFormID #fsg-core label {
	margin-top: 6px;
}
form#flowFormID #fsg-main label {
	margin-top: 6px;
}
form#flowFormID #fsgw-other label {
	margin-top: 6px;
}
#itcrequestform .form-group label {
	margin-top: 6px;
}
form#flowFormID #l_row_type,#l_row_sport label {
	margin-top: 0px;
}
.paddingsummary {
	float: left;
    /*width: 95px;*/
    width: 230px;
}
#flowFormID .col-md-9 .nav-tabs li a {
    font-size: 13px;
}
#flowFormID .col-md-9 .nav-tabs {
    width: 870px;
}

a.btn-main.btn-view-replace {
	padding:5px 10px 5px 10px;
	width:100%;
}

a.HTdisabled, a.HTdisabled:hover {
	background: #ccc;
}


.button-row ul.row-btn-complete {
	list-style: none;
	margin:0;
	padding:0;
	display: block;
	width:  100%;
}

.button-row ul.row-btn-complete li {
	height: 70px;      width:31%;    display: table;        float: left;      
	margin: 0px 1%;
	vertical-align: middle;
}

.button-row ul.row-btn-complete li:last-child {
	padding-right:0px;
}

.button-row ul.row-btn-complete li a {
	display: table-cell;    vertical-align: middle;      text-align: center;      width: 98%;
	padding:  3px;
}

.button-row ul.row-btn-complete li:nth-child(1) a, .button-row ul.row-btn-complete li:nth-child(3) a {

}


/*summary screen labels width*/

.document-upload.summary .personal-information .details-left {
	width:40%;
}

.document-upload.summary .contact-details .details-left {
	width:35%;
}

.document-upload.summary .registration-details .details-left {
	width:30%;
	/* margin-right:  2% !important; */
}

.document-upload.summary .club-details .details-left {
	width: 60%;
	float:left;
}

.document-upload.summary .club-contact-details .details-left {
	width: 40%;
	float:left;
}

.document-upload.summary .organization-details .details-left {
	width: 70%;
	float:left;
}

.toppadding {
	margin-top: 38px;
}
.toppadding .panel-header {
	padding: 11px 20px;
}
.toppadding .sidebar-box ul {
    padding: 0 0 10px;
}
.toppadding .sidebar-box ul:last-of-type {
    padding: 0 0 0px;
}
.steps .alert {
	/*margin-left: -11px;*/
	margin-bottom: 20px;
	margin-top: 20px;
}

#content .error-alerts {
	/*margin-left:10px;
	margin-right:10px;
	padding-left:4px;*/
}
header nav.navbar-default .container ul li a.selected {
	/*background-color: #e3e3e3;*/
	/*color: #000;*/
}
header nav.navbar-default .container ul li a.focus {
	padding-right: 10px;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
	background-color: #e3e3e3;
}
#personRequestForm input[name="search_keyword"] {
	width: 100%;
}
#personRequestForm .col-md-6 .col-md-8 {
	padding: 0px;
}
#personRequestForm .col-md-6 .col-md-8 .error {
	font-size: .9em;
	float: left;
}
#personRequestForm .col-md-6 .col-md-4 {
	padding: 0px;
}
.read-only .mfloat {
	float: left; 
	width: 100%;
}
#toggleGd_intTaskType {
	text-align: center;
}
.col-md-6 #transfer_type_option a {
	width: 50%;
}
#grid_wrapper #grid {
	width: 100%!important;
}

#flowFormID .form-group .col-md-6 .toggle-type {
	float: left;
	width: 100%;
}

.showrecoptions form #doclisttype {
	padding: 7px;
    width: 68%;
}
/* ... */

